--- a/index.html
+++ b/index.html
@@ -4,8 +4,198 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-School</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="upper-part">
+            <!-- this section is for navbar and banner part -->
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#"><img src="images/ICON/Logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Books</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Courses">Courses</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Others">Others</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#Blogs">Blogs</a>
+                    </li>
+                    <li>
+                        <button class="signin-button">Sign in</button>
+                        <!-- sign in button added -->
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+        </header>
+        <!-- this is banner section and it's devided into different div for better placement -->
+        <div class="banner row d-flex align-items-center">
+            <div class="col-md-6">
+                <p id="ask-ready">Are you ready to learn?</p>
+                <h1>Learn with fun <br>
+                on <span>any schedule</span></h1>
+                <p id="banner-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro maiores ex repellat ipsam distinctio modi.</p>
+                <button class="start-button">Get Started</button>
+            </div>
+            <div class="col-md-6">
+                <img src="images/Photos/Illustration.png" alt="">
+            </div>
+        </div>
+    </section>
     
+    <div class="container others" id="Books">
+        <div class="card-deck">
+            <div class="card  d-flex justify-content-center align-items-center">
+              <img src="images/ICON/book.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">1500+ Topic</h5>
+                <p class="card-text">Learn Anything</p>
+              </div>
+            </div>
+            <div class="card d-flex justify-content-center align-items-center">
+              <img src="images/ICON/Student.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">1800+ Students</h5>
+                <p class="card-text">Learn Anything</p>
+              </div>
+            </div>
+            <div class="card d-flex justify-content-center align-items-center">
+              <img src="images/ICON/Test.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">9k+ Test Token</h5>
+                <p class="card-text">Learn Anything</p>
+              </div>
+            </div>
+            <div class="card d-flex justify-content-center align-items-center">
+              <img src="images/ICON/Students.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">2000+ Students</h5>
+                <p class="card-text">Learn Anything</p>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container courses" id="Courses">
+        <h3>Online Courses</h3>
+        <div class="card-deck">
+            <div class="card course col-md-4">
+              <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Modern Psychology</h5>
+                <p class="card-text">Designation</p>
+                <button class="buy-course-button">Buy Course</button>
+              </div>
+              <div class="card-footer d-flex justify-content-between">
+                <div>
+                    <img src="images/ICON/calendar.png" alt="">
+                    <span>Start 20 April,2021</span>
+                </div>
+                <div ml-auto>
+                    <img src="images/ICON/people.png" alt="">
+                    <span>60 seats</span>
+                </div>
+              </div>
+            </div>
+            <div class="card course col-md-4">
+              <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Modern Psychology</h5>
+                <p class="card-text">Designation</p>
+                <button class="buy-course-button">Buy Course</button>
+              </div>
+              <div class="card-footer d-flex justify-content-between">
+                <div>
+                    <img src="images/ICON/calendar.png" alt="">
+                    <span>Start 20 April,2021</span>
+                </div>
+                <div ml-auto>
+                    <img src="images/ICON/people.png" alt="">
+                    <span>60 seats</span>
+                </div>
+              </div>
+            </div>
+            <div class="card course col-md-4">
+              <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Modern Psychology</h5>
+                <p class="card-text">Designation</p>
+                <button class="buy-course-button">Buy Course</button>
+              </div>
+              <div class="card-footer d-flex justify-content-between">
+                <div>
+                    <img src="images/ICON/calendar.png" alt="">
+                    <span>Start 20 April,2021</span>
+                </div>
+                <div ml-auto>
+                    <img src="images/ICON/people.png" alt="">
+                    <span>60 seats</span>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container testimonial" id="Blogs">
+        <h3>Testimonial</h3>
+        <div class="testimonial-body row align-items-center">
+            <div class="col-md-4 src d-flex justify-content-end">
+                <img src="images/Photos/Man.png" alt="">
+            </div>
+            <div class="col-md-8 d-flex justify-content-center">
+                <span >Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora fugiat cumque dignissimos aliquid autem voluptate reiciendis cum nesciunt eligendi laborum veniam perferendis sed. Lorem ipsum dolor sit amet.</span>
+            </div>            
+        </div>
+    </div>
+
+    <section class="lower-section">
+        <div class=" row">
+            <div class="part col-md-6">
+                <p>Millions of people of all ages and from all over the world are improving their lives with us.</p>
+            </div>
+            <div class="part col-md-2">            
+                    <h6>Course</h6>
+                    <p>Graphic Design</p>
+                    <p>Web Design</p>
+                    <p>Business</p>
+                    <p>Marketing</p>
+                    <p>Engineering</p>
+            </div>
+            <div class="part col-md-2">           
+                    <h6>Terms</h6>
+                    <p>Graphic Design</p>
+                    <p>Web Design</p>
+                    <p>Business</p>
+                    <p>Marketing</p>
+                    <p>Engineering</p>
+            </div>
+            <div class="part col-md-2">            
+                    <h6>Useful Links</h6>
+                    <p>Graphic Design</p>
+                    <p>Web Design</p>
+                    <p>Business</p>
+                    <p>Marketing</p>
+                    <p>Engineering</p>
+            </div>
+        </div>
+    </section>
+    <footer><p>Copyright © 2020 Programming-hero.com</p></footer>
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
