bonus part added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </section>
     
     <div class="container others" id="Books">
+      <!-- this part provides the key points of the website -->
         <div class="card-deck">
             <div class="card  d-flex justify-content-center align-items-center">
               <img src="images/ICON/book.png" class="card-img-top" alt="...">
@@ -88,6 +89,7 @@
     </div>
 
     <div class="container courses" id="Courses">
+      <!-- this div container area for courses purchaising -->
         <h3>Online Courses</h3>
         <div class="card-deck">
             <div class="card course col-md-4">
@@ -159,7 +161,21 @@
         </div>
     </div>
 
+    <section>
+      <!-- additional bonus part -->
+      <div class="continer contact-us">
+        <h3>Get us in touch</h3>
+        <p>With our social media</p>
+        <div class="get-us  d-flex align-items-center justify-content-center">
+          <a href="https://www.facebook.com"><img src="images/ICON/fb.png" alt=""></a>
+          <a href="https://www.youtube.com"><img src="images/ICON/yt.png" alt=""></a>
+          <a href="https://www.instagram.com"><img src="images/ICON/in.png" alt=""></a>
+          <a href="https://www.linkedin.com"><img src="images/ICON/li.png" alt=""></a>
+      </div>
+    </section>
+
     <section class="lower-section">
+      <!-- this section contains the summary of this web site -->
         <div class=" row">
             <div class="part col-md-6">
                 <p>Millions of people of all ages and from all over the world are improving their lives with us.</p>
@@ -190,7 +206,10 @@
             </div>
         </div>
     </section>
-    <footer><p>Copyright © 2020 Programming-hero.com</p></footer>
+    <footer>
+      <!-- footer sectiion for Copyright claims -->
+      <p>Copyright © 2020 Programming-hero.com</p>
+    </footer>
 
 
 
